argo-events/debug-image-pull.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-image-pull
  namespace: argo-workflows
spec:
  containers:
    - name: debug
      image: docker.io/harshfps/workflow-scripts:latest
      command: ["/bin/sh", "-c"]
      args: ['echo "Cloning repository" && ./01-tenant-clone-repo.sh']
      resources:
        requests:
          memory: "64Mi"
          cpu: "50m"
        limits:
          memory: "128Mi"
          cpu: "100m"
  restartPolicy: Never
